@@ -46,20 +46,31 @@ following file list.
 
    gettext-runtime
 
+      $prefix/share/gettext/ABOUT-NLS
+
       $prefix/bin/gettext
       $prefix/bin/ngettext
       $prefix/man/man1/gettext.1
       $prefix/man/man1/ngettext.1
       $prefix/doc/gettext/gettext.1.html
       $prefix/doc/gettext/ngettext.1.html
-      $prefix/share/gettext/ABOUT-NLS
-      $prefix/share/gettext/libintl.jar
+      $prefix/share/locale/*/LC_MESSAGES/gettext-runtime.mo
+
       $prefix/lib/libintl.*               (not installed on glibc systems)
       $prefix/lib/charset.alias           (not installed on glibc systems)
       $prefix/share/locale/locale.alias   (not installed on glibc systems)
       $prefix/include/libintl.h           (not installed on glibc systems)
+      $prefix/man/man3/*
+      $prefix/doc/gettext/*.3.html
+
+      $prefix/share/gettext/libintl.jar
+      $prefix/doc/gettext/javadoc1/*
+      $prefix/doc/gettext/javadoc2/*
+
       $prefix/lib/libasprintf.*
       $prefix/include/autosprintf.h
+      $prefix/doc/libasprintf/autosprintf.html
+      $prefix/info/autosprintf.info
 
    gettext-tools
 
@@ -73,24 +84,18 @@ following file list.
       $prefix/man/man1/xgettext.1
       $prefix/man/man1/gettextize.1
       $prefix/man/man1/autopoint.1
-      $prefix/man/man3/*
       $prefix/doc/gettext/msg*.1.html
       $prefix/doc/gettext/xgettext.1.html
       $prefix/doc/gettext/gettextize.1.html
       $prefix/doc/gettext/autopoint.1.html
-      $prefix/doc/gettext/*.3.html
-      $prefix/doc/gettext/javadoc1/*
-      $prefix/doc/gettext/javadoc2/*
       $prefix/doc/gettext/gettext_*.html
-      $prefix/doc/libasprintf/autosprintf.html
       $prefix/info/gettext.info*
-      $prefix/info/autosprintf.info
       $prefix/include/gettext-po.h
       $prefix/lib/libgettextlib*
       $prefix/lib/libgettextsrc*
       $prefix/lib/libgettextpo*
       $prefix/lib/gettext/*
-      $prefix/share/locale/*/LC_MESSAGES/gettext.mo
+      $prefix/share/locale/*/LC_MESSAGES/gettext-tools.mo
       $prefix/share/gettext/config.rpath
       $prefix/share/gettext/mkinstalldirs
       $prefix/share/gettext/intl/*
